lighting added for morning/evening

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
     <body>
 
-        <button id = "MorningButton">Morning Light</button>
-        <button id = "AfternoonButton">Afternoon Light</button>
+        <button id = "Button0">Morning Light</button>
+        <button id = "Button1">Afternoon Light</button>
 
         <script id = "vertex-shader" type = "x-shader/x-vertex">
             
